--- a/css/styles.css
+++ b/css/styles.css
@@ -259,7 +259,7 @@ body.dark{
 .project__image{
     min-width: 320px;
     width: 320px;
-    height: 220px;
+    height: auto;
     border-bottom: solid 4px var(--primary-color);
     border-radius: var(--border-radius);
     transition: var(--transition);
@@ -387,4 +387,9 @@ label{
     color: var(--bg-color);
     font-size: 1.5rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
 }
